--- a/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
+++ b/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
@@ -1,7 +1,9 @@
 ### Enumeration
 
 - curl
-  - curl -v http://10.10.10.10/
+  - curl -v -X OPTIONS http://10.10.10.10/
+  - curl -v -X PUT http://10.10.10.10/
+    - tests if can put files. 
 - assetfinder
 - subfinder
   - `subfinder -d url -o filename`
