--- a/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
+++ b/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
@@ -11,6 +11,7 @@
   - `amass enum- d url`
 - crt.sh
 - dirbuster
+  - dirb http://10.10.10.10/
 - theHarvester
 - httprobe - validate what is live
 - gobuster
