--- a/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
+++ b/ENUM/Ports/80,8080,443(HTTP,HTTPS).md
@@ -1,5 +1,7 @@
 ### Enumeration
 
+-burp
+  - dirb for any upload pages, change GET to OPTIONS in burp to look for PUT options for exp
 - curl
   - curl -v -X OPTIONS http://10.10.10.10/
   - curl -v -X PUT http://10.10.10.10/
